welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: not found: value x
		setPos(x,y)
                       ^ZigZag:15: error: not found: value c
		c=c+1
                ^ZigZag:16: error: not found: value x
		x=x+1
                ^ZigZag:27: error: not found: value x
		setPos(x,y)
                       ^ZigZag:28: error: not found: value c
		c=c+1
                ^ZigZag:29: error: not found: value x
		x=x-1
                ^